# PyVMF

./: pyproject.toml
PyVMF/: __init__.py  importer.py
PyVMF/debug/: ico.py
src/: PyVMF.py
